--- a/1. Introduction.tex
+++ b/1. Introduction.tex
@@ -11,7 +11,7 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = 7cm]{Diagrams/Chapter_1/Paris_roll_out_2.png}
+    \includegraphics[height = 6.5cm,width = 7cm]{Diagrams/Chapter_1/Paris.pdf}
     \caption{Installed wind capacity in the North Sea in GW \cite{noauthor_vision_nodate}}
     \label{fig:Paris_roll_out}
 \end{figure}
