--- a/preface.tex
+++ b/preface.tex
@@ -16,11 +16,11 @@ Last but not least, my family has been supportive and encouraging of my decision
 \newpage
 \chapter*{Abstract}
 \setheader{Preface}
-To meet the European climate target of 27\% by 2030 in an effective way, large scale offshore wind energy proves to be an important solution for the Netherlands. The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale. This includes offshore wind farms power capacities ranging from 70 to 150 GW by 2040 and increasing upto 180 GW by 2045. On the other hand, the implementation of large scale offshore could also lead to an increase in the penetration of power electronic converter based units in the grid which could lead to rise of challenges to the power system.
+To meet the European climate target of 27\% by 2030 in an effective way, large scale offshore wind energy proves to be an important solution for the Netherlands. The international association consisting of TenneT, Energinet, Gausine and Port of Rotterdam is working on developing technical solutions for supplying clean energy from renewable energy sources in large scale. This includes offshore wind farms power capacities ranging from 70 to 150 GW by 2040 and increasing upto 180 GW by 2045. On the other hand, the implementation of large scale offshore could also lead to an increase in the penetration of power electronic converter based units in the grid which could lead to rise of technical challenges in the power system.
 
-To mitigate the challenges due to increasing power electronic converters, a control strategy is implemented in RSCAD for EMT based simulations. After analyzing the need for 66 kV \gls{HVAC} transmission from the wind farms to the offshore centralized platform, in this thesis, a 66 kV offshore network is developed with the control strategy implemented in Type-4 wind generators in RSCAD. The control strategy provides continuous voltage control that improves the dynamic performance of the power system. The significant requirement of reactive power injection by the wind generators during dynamic conditions as mentioned in many grid codes is satisfied by the controller. The working of the control strategy is validated for \gls{EMT} simulations under severe dynamic conditions by developing a similar network in PowerFactory with a benchmark controller model. The final goal of developing a large scale network with a defined topology for 2 GW is achieved in a modularized approach in RSCAD. In this network, four sets of offshore wind farms are connected across two offshore modular multi-level converters working in two different control schemes and the coordination between the implemented voltage control in wind generators and the control structures in modular multi-level converters is analysed for different events in the network.
+To mitigate the challenges due to increasing power electronic converters, a Direct Voltage Control (DVC) strategy is implemented in RSCAD for Electro-Magnetic Transient (EMT) based simulations. After analyzing the need for 66 kV High Voltage Alternating Current (HVAC) transmission from the Offshore Wind Farms (OWFs) to the offshore converter station, in this thesis, a 66 kV offshore network is developed with the control strategy implemented in Type-4 Wind Generators (WGs) in RSCAD. The DVC provides continuous voltage control that improves the dynamic performance of the power system. The significant requirement of reactive power injection by the OWFs during dynamic conditions as mentioned in many grid codes is satisfied by the controller and it avoids the need of an external controller to perform such an action. The working of the DVC in RSCAD is validated for EMT simulations under severe dynamic conditions by developing a similar 66 kV HVAC network in PowerFactory with the benchmark DVC model. The RSCAD model also provides a better representation of the practical environment operation. 
 
-
+The final goal of developing a large scale network with a defined topology for 2 GW is achieved in a modular approach in RSCAD. In this network, four sets of OWFs are connected across two offshore Modular Multi-level Converters (MMCs) working in two different control schemes. The coordination between the implemented DVC in WGs and the control structures in MMCs is analysed for different scenarios in the network. The performance of the 2 GW network in terms of short-term voltage stability and power flow during severe dynamic conditions in the grid is analyzed. The requirement of reactive power injection from OWF during dynamic conditions is analyzed by performing a three-phase fault scenario in the middle of the cable, thereby islanding the OWF.
 
 \begin{flushright}
 {\makeatletter\itshape
