--- a/report.bib
+++ b/report.bib
@@ -190,3 +190,10 @@ The simulator-Hardware,
   year={2015},
   school={{\'E}cole Polytechnique de Montr{\'e}al}
 }
+
+@book{kothari2003modern,
+  title={Modern power system analysis},
+  author={Kothari, Dwarkadas Pralhaddas and Nagrath, IJ},
+  year={2003},
+  publisher={Tata McGraw-Hill Education}
+}
