--- a/report.tex
+++ b/report.tex
@@ -110,7 +110,7 @@
 \newglossaryentry{IGBT}{name={IGBT}, description={Insulated Gate Bipolar Transistors}}
 \newglossaryentry{PWM}{name={PWM}, description={Pulse Width Modulation}}
 \newglossaryentry{HV}{name={HV}, description={High Voltage}}
-
+\newglossaryentry{LV}{name={LV}, description={Low Voltage}}
 \glstoctrue
 
 
