--- a/3.Implementation of Direct Voltage Control for 66 kV network.tex
+++ b/3.Implementation of Direct Voltage Control for 66 kV network.tex
@@ -106,13 +106,13 @@ After understanding the basics of RSCAD software, a 66 kV offshore network, as s
 The 700 MW offshore wind power is represented by a single \gls{OWF} consisting of 116 \gls{WG}s, each rated 6 MW connected in parallel. Type-4 \gls{WG}s are used for all units. The RSCAD representation of aggregated \gls{OWF} is used utilized in this work. The aggregated model consists of \gls{PE} components which require higher switching frequency %(19*50 = 950 Hz in this case) 
 and hence is modelled in a small time step environment by selecting the "VSC Bridge Box" (Figure \ref{fig:SmallTimeStepBlock}) available in the small time step library in the Draft module. The box contains the \gls{PMSG}, \gls{MSC}, \gls{DC} capacitors, chopper circuit, \gls{GSC}, high pass filter and offshore transformer as illustrated in Figure \ref{fig:OveriewSmallTimeStepOWF}. As mentioned in Section \ref{RTDS_Theory}, the block can be assigned to have a time step value between 1400 to 3750 ns. 
 %It is necessary to set this time step to a nearly high value to avoid the time step overflow error in RSCAD.
-The value can be entered by right-clicking on the small time block and choosing "Edit" and then "Parameters" as shown in Figure \ref{fig:SmallTimeStepBlock}. Also, it must the noted that the above-specified step size is only for initialization and the actual used step size can be viewed in the Map file which is accessible by right-clicking on any white space in the Draft file and selecting "View" then, "Map File". It is also worth mentioning that the ratio of the large time step to the small-time step in a network in RSCAD must be higher than 12 when using NovaCor and must be higher than 17 when using PB5 racks \cite{rtds_tech}. 
+The value can be entered by right-clicking on the small time step block and choosing "Edit" and then "Parameters" as shown in Figure \ref{fig:SmallTimeStepBlock}. Also, it must the noted that the above-specified step size is only for initialization and the actual used step size can be viewed in the Map file which is accessible by right-clicking on any white space in the Draft file and selecting "View" then, "Map File". It is also worth mentioning that the ratio of the large time step to the small-time step in a network in RSCAD must be higher than 12 when using NovaCor and must be higher than 17 when using PB5 racks \cite{rtds_tech}. 
 
 \begin{figure}[H]
 \centering
 %\hspace*{-4.2cm}
     \includegraphics[height = 8cm,width = 7cm]{Diagrams/Chapter_3/SmallTimeStepBlock.PNG}
-    \caption{Small-time step block}
+    \caption{Small time step block}
     \label{fig:SmallTimeStepBlock}
 \end{figure}
 
@@ -149,7 +149,7 @@ The wind generation system consists of \gls{PMSG}, \gls{MSC}, \gls{DC} circuit a
 
 
 \subsubsection{High Pass Filter (HPF) with Series Reactor}\label{HPF_design}
-The switching operation of converters leads to the generation of harmonics. Thereby, to mitigate these harmonics, filters are provided at the output of the \gls{GSC}. There are various types of filters available for this application. The common ones are the LCL filter, L filter and high pass filter \cite{beres_review_2016}. In RSCAD, there is a high pass filter block readily available in the small time step library, as shown in Figure \ref{fig:HPF} \cite{rtds_tech}. It is chosen by selecting the \gls{VSC} branch model in this library and changing the branch type to "HIPASS". A three-phase inductance branch is chosen by selecting the branch type to "L" and connected as the series reactor, as shown in Figure \ref{fig:OveriewSmallTimeStepOWF}. After the \gls{HPF} parameters are calculated and set, then it would only be required to tune the inductance of the series reactor to limit the flow of current by adding impedance and hence stabilizing the voltage. Hence it was decided to go with \gls{HPF}.
+The switching operation of converters leads to generation of harmonics. Thereby, to mitigate these harmonics, filters are provided at the output of the \gls{GSC}. There are various types of filters available for this application. The common ones are the LCL filter, L filter and high pass filter \cite{beres_review_2016}. In RSCAD, there is a high pass filter block readily available in the small time step library, as shown in Figure \ref{fig:HPF} \cite{rtds_tech}. It is chosen by selecting the \gls{VSC} branch model in this library and changing the branch type to "HIPASS". A three-phase inductance branch is chosen by selecting the branch type to "L" and connected as the series reactor, as shown in Figure \ref{fig:OveriewSmallTimeStepOWF}. After the \gls{HPF} parameters are calculated and set, then it would only be required to tune the inductance of the series reactor to limit the flow of current by adding impedance and hence stabilizing the voltage. Hence it was decided to go with \gls{HPF}.
 
 \begin{figure}[H]
 \centering
@@ -164,7 +164,7 @@ The base impedance on the low voltage side of transformer is calculated in ohms 
     Z_{baseLV} = \frac{LV^2}{Base MVA} = \frac{(2 kV)^2}{6 MVA} = 0.6667\Omega  
 \end{equation}
 
-The \gls{HPF} should have a high impedance value at the nominal frequency (50 Hz) so that it works as an open circuit. Therefore a higher value of 10 times base impedance is chosen. The impedance of the capacitor at 50 Hz is computed by the following equation.
+The \gls{HPF} should have a high impedance value at the nominal frequency (50 Hz) so that it works as an open circuit. Therefore, a higher value of 10 times base impedance is chosen. The impedance of the capacitor at 50 Hz is computed by the following equation.
 
 \begin{equation}
     Z_c = 10 * Z_{baseLV} = 10 * 0.6667 \Omega = 6.667 \Omega   
@@ -174,7 +174,7 @@ Hence, the value of capacitance at 50 Hz in Farad is calculated by using Equatio
     C = \frac{1}{2\pi f *Z_c} = \frac{1}{2\pi*50 Hz*6.667\Omega} = 4.77462*10^{-4} F
 \end{equation}
 
-The next step is to calculate the inductance 'L'. The inductance must be selected so that during the switching or modulating frequency (i.e. 19*50 Hz= 950 Hz in this case), the impedance of the inductor and capacitor cancel each other. The switching and higher frequencies can be passed to the ground and thereby purely sinusoidal signals will be transferred to the \gls{PCC} on doing so. The impedance of the inductor, resistor and capacitor must be equal at the switching frequency in order to pass the high frequencies to the ground. Therefore, to calculate inductance, it is considered as a series LC circuit. The resonant frequency of the LC circuit is given by Equation \ref{resosn_freq_eq}.
+The next step is to calculate the inductance 'L'. The inductance must be selected so that during the switching or modulating frequency (950 Hz in this case), the impedance of the inductor and capacitor cancel each other. The switching and higher frequencies can be passed to the ground and thereby purely sinusoidal signals will be transferred to the \gls{PCC} on doing so. The impedance of the inductor, resistor and capacitor must be equal at the switching frequency in order to pass the high frequencies to the ground. Therefore, to calculate inductance, it is considered as a series LC circuit. The resonant frequency of the LC circuit is given by Equation \ref{resosn_freq_eq}.
 
 \begin{equation}\label{resosn_freq_eq}
     \omega = \frac{1}{\sqrt{L*C}}    
@@ -226,7 +226,19 @@ The \gls{GSC} is connected in series to a three-phase offshore 66/2 kV, 6 MVA tr
 \subsection{HVAC Cables}\label{HVAC_cable_RSCAD}
 The \gls{HVAC} cables transfer power from the \gls{OWF} transformer to the  equivalent 66 kV \gls{AC} source. The \gls{HVAC} cables are rated at 66 kV and modelled in the large time step environment. When compared to 33 kV \gls{HVAC} cable system, 66kV cables allow twice the amount of power to be transferred for the same area of cross-section and require lower array cabling \cite{dnv66kv}. 
  
-RSCAD allows cables to be modelled as Frequency Dependent Phase, Bergeron and Pi models \cite{rtds_tech}. The Frequency Dependent Phase and the Bergeron are travelling wave models. Pi model representation of cable is chosen for this research in RSCAD. To ease the goal of comparing the performance of models in two \gls{EMT} software which is shown in the later section, a Pi cable model was chosen. In RSCAD, cable parameters can be entered using the cable module available in the RSCAD modules section as denoted by a red box in Figure \ref{fig:CableModule_mark}. This opens a cable setup popup menu into which the cable parameters are added. The file is then compiled and saved in a ".clo" file format. 
+RSCAD allows cables to be modelled as Frequency Dependent Phase, Bergeron and Pi models \cite{rtds_tech}. The Frequency Dependent Phase and the Bergeron are travelling wave models. Pi model representation of cable is chosen for this research in RSCAD. To ease the goal of comparing the performance of models in two \gls{EMT} software which is shown in the later section, a Pi cable model was chosen. In RSCAD, cable parameters can be entered using the cable module available in the RSCAD modules section as denoted by a red box in Figure \ref{fig:CableModule_mark}. 
+
+ 
+In the Draft module, the cable model is added in the circuit using the unified model shown in Figure \ref{fig:CableParaBlock} available in RSCAD library. The unified model consists of the following components: 
+%\setlist{nolistsep}
+    \begin{itemize}[noitemsep]
+    \item Calculation Block
+    \item Sending End Terminal
+    \item Receiving End Terminal
+\end{itemize}
+
+The detailed representation of the cable parameters in Cable module, and the representation of the cable model using the calculation block, sending end terminal and receiving end terminals in the Draft module is shown in Appendix \ref{config_cable}.
+
 %\vspace{-13mm}
 \begin{figure}[H]
 \centering
@@ -237,48 +249,19 @@ RSCAD allows cables to be modelled as Frequency Dependent Phase, Bergeron and Pi
 \end{figure}
 %\vspace{-16mm}
 
-In the Draft module, the cable model is added in the circuit using the unified model shown in Figure \ref{fig:CableParaBlock} available in RSCAD library. The unified model consists of the following components: 
-%\setlist{nolistsep}
-    \begin{itemize}[noitemsep]
-    \item Calculation Box
-    \item Sending End Terminal
-    \item Receiving End Terminal
-\end{itemize}
-
-The cable parameters are referenced through the external file previously created using the cable module. In RSCAD, Pi cable models are derived from Bergeron cable model. Initially, a Bergeron cable model is created with RLC parameters and then the option to make it work as a Pi model is chosen. The ".clo" file must be added first using the 'Dnm1' option, which is obtained by double-clicking on the calculation box (Figure \ref{fig:CableConfig}). The cable constants are of type Bergeron as chosen in the 'cntyp' parameter in Figure \ref{fig:CableConfig}. The 'frcpi' parameter available in the "Options when using Bergeron data" tab, forces the use of Pi section model manually by the user. The selection is made as shown by the red box in Figure \ref{fig:CabAddit}. The terminal block must be specified as either the sending or receiving end as shown in Figure \ref{fig:Terminal_options} and the cable name provided in the calculation block has to entered in the terminal blocks as well.\\
-
 \begin{figure}[H]
-\centering
-\subfloat[Unified Cable Model]{\label{fig:CableParaBlock}\includegraphics[width=.35\linewidth]{Diagrams/Chapter_3/CableParaBlock.PNG}}\par
-\subfloat[Cable configuration]{\label{fig:CableConfig}\includegraphics[width=.5\linewidth]{Diagrams/Chapter_3/CableParaBlockInside1.PNG}}\hfill
-\subfloat[Additional options]{\label{fig:CabAddit}\includegraphics[width=.5\linewidth]{Diagrams/Chapter_3/CableParaBlockInside2_mark.png}}
-\caption{Configuration of the calculation block}
-\label{fig}
-\end{figure}
-
-\begin{figure}[H]
-\centering
-\begin{subfigure}{0.5\textwidth}
   \centering
-  \includegraphics[height = 4cm,width = 8.5cm]{Diagrams/Chapter_3/CableParaBlock_sen_term.PNG}
-  \caption{Sending end terminal}
-  \label{fig:CableParaBlock_sen_term}
-\end{subfigure}%
-\begin{subfigure}{0.5\textwidth}
-  \centering
-  \includegraphics[height = 4cm,width = 8.5cm]{Diagrams/Chapter_3/CableParaBlock_rec_term.PNG}
-  \caption{Receiving end terminal}
-  \label{fig:CableParaBlock_rec_term}
-\end{subfigure}
-\caption{Configuration of the terminal blocks}
-\label{fig:Terminal_options}
+  % include first image
+  \includegraphics[height = 5.5cm,width = 6.5cm]{Diagrams/Chapter_3/CableParaBlock.PNG}  
+  \caption{Cable configuration}
+  \label{fig:CableParaBlock}
 \end{figure}
 
 \subsection{AC Equivalent Source}
-The equivalent source shows the grid connection and is modelled as an \gls{AC} voltage source that represents an infinite grid. The source voltage is rated at 66 kV (line-line RMS).
+The equivalent source shows the grid connection and is modelled as an \gls{AC} voltage source that represents an infinite grid. The infinite grid representation is similar to the representation of a synchronous generator with high inertia constant. For a strong grid, typical values of inertia constant of 5 MW/MVA$^2$ depicting a synchronous generator is chosen from \cite{kothari2003modern}. The commonly represented damping constant is the frequency-dependent load damping constant. However, the damping constant is zero in this case as no loads and a lossless machine is considered. The source voltage is rated at 66 kV (line-line RMS).
 
 \section{Control structures}
-The control strategies are implemented in the \gls{MSC} and \gls{GSC} of the \gls{WG}. The decoupled current control architecture utilized in \gls{MSC} is explained in Appendix.[]. The major area of interest for this thesis is the control strategy of \gls{GSC}. The \gls{DVC} illustrated in Section \ref{DVC_theory} is implemented in the \gls{GSC}.   
+The control strategies are implemented in the \gls{MSC} and \gls{GSC} of the \gls{WG}. The decoupled current control architecture utilized in \gls{MSC} is explained in Appendix \ref{MSC_Control}. The major area of interest for this thesis is the control strategy of \gls{GSC}. The \gls{DVC} illustrated in Section \ref{DVC_theory} is implemented in the \gls{GSC}.   
 
 \section{Implementation of DVC in RSCAD}\label{DVC_RSCAD}
 The control strategy depicted in \cite{korai_dynamic_2019} is achieved in RSCAD software. The control was implemented in RSCAD in \cite{sethi_real-time_nodate-new} for a 33 kV transmission network, but the final goal of achieving reactive current injection during severe dynamic conditions was lacking. The primary reason was due to the current limiter block that is explained later in this section. The block is implemented successfully in this work, and the results are illustrated. 
@@ -296,7 +279,7 @@ From the control structure, it can be seen that, unlike in conventional current 
 \end{figure}
 
 \paragraph{Slow global VAR control}
-It is the upper-level controller and can be modelled as a power factor, reactive power or voltage controller. The reference values can be directly sent as inputs to the PI controller if the controller is made to use for reactive power or power factor control. The voltage controller is used here, and this requires reactive power reference to be determined from a predefined voltage versus reactive power droop characteristic. A voltage value for which the injection of reactive power is zero is obtained from this characteristic. The obtained reactive power reference output is provided as input to the PI controller having a small proportional gain and ample time constant in order to avoid transformer tap changes and not very fast in order to avoid unwanted controller interactions. The automatic adjustment of reactive power in relation to varying voltage using the proportional gain $k_{QU}$ is significant. There is no dead-band present in order to ensure continuous voltage control. The  proportional gain that represents the droop can be obtained from the following relation,
+It is the upper-level controller and can be modelled as a power factor, reactive power or voltage controller. The reference values can be directly sent as inputs to the \gls{PI} controller if the controller is made to use for reactive power or power factor control. The voltage controller is used here, and this requires reactive power reference to be determined from a predefined voltage versus reactive power droop characteristic. A voltage value for which the injection of reactive power is zero is obtained from this characteristic. The obtained reactive power reference output is provided as input to the \gls{PI} controller having a small proportional gain and ample time constant in order to avoid transformer tap changes and not very fast in order to avoid unwanted controller interactions. The automatic adjustment of reactive power in relation to varying voltage using the proportional gain $k_{QU}$ is significant. There is no dead-band present in order to ensure continuous voltage control. The  proportional gain that represents the droop can be obtained from the following relation,
 
 \begin{equation}
     k_{QU} = \frac{\Delta q_{gsc}}{\Delta u_N}
@@ -309,7 +292,7 @@ In theory, the proportional gain can be varied with changes in power flow. But t
 where $U_N$ is desired voltage and $U_{N\_{ref}}$ is the voltage at which no reactive power injection is required.
 The reactive power limits $q_{vsc\_max}$ and $q_{vsc\_min}$ are the continuous values in steady-state and can be computed from the P-Q diagram of the converter operation. The time constant is chosen in the range of 5-30 seconds wherein a value in the higher range tends to stabilize whereas a value in the lower range can cause interactions with other controllers.
 
-The slow global VAR controller must be made inactive once the converter current limit is reached and also during cases of large voltage sags or swells by providing a signal to deactivate the controller. A scenario that could lead to the case mentioned above is a 3 phase short circuit event. The output from the upper-level controller must be constant because of the chosen high integration time constant or must be limited by a blocking signal \cite{korai_dynamic_2019}.
+The slow global VAR controller must be made inactive once the converter current limit is reached and also during cases of large voltage sags or swells by providing a signal to deactivate the controller. A scenario that could lead to the case mentioned above is a three-phase short circuit event. The output from the upper-level controller must be constant because of the chosen high integration time constant or must be limited by a blocking signal \cite{korai_dynamic_2019}.
 
 \paragraph{Fast local voltage control}
 The terminal voltage reference output received from the slow global VAR controller is provided as input to the fast local controller. This controller must be able to provide prompt support for grid voltage during the time of faults. The response of the controller in terms of voltage support must depend on local inputs sensed at the \gls{PCC} and not on quantities that need to be measured at remote places using a communication mechanism. A proportional gain is used for this purpose. The proportional gain can be obtained from the following relation \cite{korai_dynamic_2019},
@@ -378,7 +361,7 @@ else
 \end{equation}
 
 \subsection{Voltage Limitation}
-The \gls{AC} voltage of the \gls{VSC} is generally limited by the \gls{DC} voltage value. The factor that brings the relationship between the \gls{AC} and \gls{DC} voltages is the modulation index. The modulation index is computed, as shown in Equation \ref{MI_eq}. The maximum value of the modulation index is set around to 1, and \gls{VSC} voltage must be limited at that point to avoid non-saturation of the \gls{VSC}. 
+The \gls{AC} voltage of the \gls{GSC} is generally limited by the \gls{DC} voltage value. The factor that brings the relationship between the \gls{AC} and \gls{DC} voltages is the modulation index. The modulation index is computed, as shown in Equation \ref{MI_eq}. The maximum value of the modulation index is set around to 1, and \gls{GSC} voltage must be limited at that point to avoid non-saturation of the \gls{GSC}. 
 
 \begin{equation}\label{MI_eq}
     m = \frac{2\sqrt{2} V_{AC}}{\sqrt{3} {V_{DC}}}
@@ -389,18 +372,18 @@ After the 66 kV system is modelled, it has to be tested for operation in steady-
 
 \subsection{Three-phase line to ground fault}
 
-The line to ground fault logic available in the power system library in RSCAD is adapted in this network by splitting the cable model into two halves and connecting it in the middle of the two halves of the cables as shown in Figure \ref{fig:2cablesblockwithfault}. The fault logic is explained in Appendix. [] 
+The line to ground fault logic available in the power system library in RSCAD is adapted in this network by splitting the cable model into two halves and connecting it in the middle of the two halves of the cables as shown in Figure \ref{fig:2cablesblockwithfault}. The fault logic is explained in Appendix \ref{fault_logic}. 
 The Draft module is compiled, and after ensuring no errors, the system is run in the Runtime module. The system is stabilized with the voltage values within the tolerance limit of $\pm$ 10\% during steady-state operation.
 
 \begin{figure}[H]
 \centering
 %\hspace*{-1.2cm}
     \includegraphics[height = 11.5cm,width = 12.5cm]{Diagrams/Chapter_3/2CablesBlockWithFault.png}
-    \caption{Fault logic with cable models}
+    \caption{Representation of three-phase fault in the middle of the cable in RSCAD}
     \label{fig:2cablesblockwithfault}
 \end{figure}
 
-The three-phase line to ground fault is applied at 0.5 s with a fault clearing time of 140 ms. The voltage and frequency responses are as shown in Figure \ref{fig:Vol_Freq_3phaseSC}. In the pre-fault condition, the voltage is stabilized and the active current of nearly 1 p.u. is provided by the \gls{GSC}. There is no reactive current or reactive power injection during this time. During the time of fault, the voltage drops at \gls{PCC} as expected for a three-phase line to ground fault (Figure \ref{fig:Vol_Freq_3phaseSC} a)). \gls{DVC} allows reactive current and hence reactive power to be injected by \gls{GSC} during the time of fault to support the voltage, as shown in Figure \ref{fig:ID_IQ_Final_3}. The corresponding behaviour is a major requirement as per the grid codes during dynamic conditions, as mentioned in \cite{mohseni_review_2012}. At the same time, the active current and thus active power is limited, and hence there is no generation from the \gls{WG} (Figure \ref{fig:ID_IQ_Final_3}). Simultaneously, the voltage across DC-link increases in order to maintain the power balance as per the Equation \ref{powbaleq}. The chopper gets activated when \gls{DC} voltage goes beyond a particular limit in order to protect the \gls{DC} link from overvoltage. After the fault is cleared, the \gls{DVC} allows for quick recovery and voltage and powers return to the pre-fault values. There is no major drop in frequency as well since there are no loads connected to the \gls{OWF} (Figure \ref{fig:Vol_Freq_3phaseSC} b)). Hence the frequency control does not get activated since deviation remains within 49.8 Hz and 50.2 Hz. Another important observation is the transients in the currents during the occurrence of the fault in Figure \ref{fig:ID_IQ_Final_3}. These are due to the dynamic effects that arise due to the exclusion of an integrator \cite{korai_dynamic_2019}. It can be controlled by proper tuning of washout filters.
+The three-phase line to ground fault is applied at 0.5 s with a fault clearing time of 140 ms. The voltage and frequency responses are as shown in Figure \ref{fig:Vol_Freq_3phaseSC}. In the pre-fault condition, the voltage is stabilized and the active current of nearly 1 p.u. is provided by the \gls{GSC}. There is no reactive current or reactive power injection during this time. During the time of fault, the voltage drops at \gls{PCC} as expected for a three-phase line to ground fault (Figure \ref{fig:Vol_Freq_3phaseSC} a)). \gls{DVC} allows reactive current and hence reactive power to be injected by \gls{GSC} during the time of fault to support the voltage, as shown in Figure \ref{fig:ID_IQ_Final_3}. The corresponding behaviour is a major requirement as per the grid codes during dynamic conditions, as mentioned in \cite{mohseni_review_2012}. At the same time, the active current and thus active power is limited, and hence there is no generation from the \gls{OWF} (Figure \ref{fig:ID_IQ_Final_3}). Simultaneously, the voltage across DC-link increases in order to maintain the power balance as per the Equation \ref{powbaleq}. The chopper gets activated when \gls{DC} voltage goes beyond a particular limit in order to protect the \gls{DC} link from overvoltage. After the fault is cleared, the \gls{DVC} allows for quick recovery and voltage and powers return to the pre-fault values. There is no major drop in frequency as well since there are no loads connected to the \gls{OWF} (Figure \ref{fig:Vol_Freq_3phaseSC} b)). Hence the frequency control does not get activated since deviation remains within 49.8 Hz and 50.2 Hz. Another important observation is the transients in the currents during the occurrence of the fault in Figure \ref{fig:ID_IQ_Final_3}. These are due to the dynamic effects that arise due to the exclusion of an integrator \cite{korai_dynamic_2019}. It can be controlled by proper tuning of washout filters.
 
 \begin{figure}[H]
 %\centering
@@ -438,13 +421,13 @@ Effect of this property of the washout filter is observed in active and reactive
 %\centering
 \begin{subfigure}{0.5\textwidth}
  % \centering
-  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_3/ID_Washout_Comp.eps}
+  \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_3/ID_Washout_Comp.eps}
   \caption{Current in d axis during three phase fault for gain 0.01, 0.03 and 0.05}
   \label{fig:ID_Washout_Comp}
 \end{subfigure}%
 \begin{subfigure}{0.5\textwidth}
   %\centering
-  \includegraphics[height = 7cm,width = \textwidth]{Diagrams/Chapter_3/IQ_Washout_Comp.eps}
+  \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_3/IQ_Washout_Comp.eps}
   \caption{Current in q axis during three phase fault for gain 0.01, 0.03 and 0.05}
   \label{fig:IQ_Washout_Comp}
 \end{subfigure}
@@ -540,7 +523,7 @@ Before the start of the simulation, a specific time step value suitable for both
 %\hspace*{-1.2cm}
 \begin{subfigure}{.55\textwidth}
   \centering
-  \includegraphics[height=4.5cm,width=8.5cm]{Diagrams/Chapter_3/Stepsize_RSCAD.PNG}
+  \includegraphics[height=3.5cm,width=7.5cm]{Diagrams/Chapter_3/Stepsize_RSCAD.PNG}
   \caption{Time step setting in RSCAD}
   \label{Stepsize_RSCAD}
 \end{subfigure}%
@@ -572,7 +555,7 @@ The currents in both the models also have a similar profile, as summarized for t
 \begin{figure}[H]
 %\centering
 %\hspace*{-1.2cm}
-    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_3/ID_IQ_Comp_New_3.eps}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_3/ID_IQ_Comp_New_3.eps}
     \caption{Active and reactive currents measured for a three phase fault in the middle of the cable in RSCAD and PowerFactory}
     \label{fig:ID_IQ_Comp}
 \end{figure}
@@ -581,15 +564,15 @@ The currents in both the models also have a similar profile, as summarized for t
 \begin{figure}[H]
 %\centering
 %\hspace*{-0.1cm}
-    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_3/ID_RSCAD_PFD_Comp.eps}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_3/ID_RSCAD_PFD_Comp.eps}
     \caption{Active currents flowing to the network for a three phase fault in the middle of the cable}
     \label{fig:ID_fullACSource}
 \end{figure}
-
+\vspace{-8mm}
 \begin{figure}[H]
 %\centering
 %\hspace*{-0.1cm}
-    \includegraphics[height = 6.5cm,width = \textwidth]{Diagrams/Chapter_3/IQ_RSCAD_PFD_Comp.eps}
+    \includegraphics[height = 6cm,width = \textwidth]{Diagrams/Chapter_3/IQ_RSCAD_PFD_Comp.eps}
     \caption{Reactive currents flowing to the network for a three phase fault in the middle of the cable}
     \label{fig:IQ_fullACSource}
 \end{figure}
