--- a/5.Operation of the large scale OWF network.tex
+++ b/5.Operation of the large scale OWF network.tex
@@ -18,7 +18,7 @@ The simulation time step for all the simulations are set to 50 $\mu$s. All plots
 \begin{itemize}
     \item \gls{MMC}-1:
     \begin{itemize}
-        \item Islanded mode operation (U/F control)
+        \item Islanded mode operation (V/F control)
         \item \gls{AC} voltage control, V$_{PCC\_{ref}}$ = 1 p.u. (Reference \gls{AC} voltage)
     \end{itemize}
 \end{itemize}
@@ -40,7 +40,7 @@ The simulation time step for all the simulations are set to 50 $\mu$s. All plots
 \end{itemize}
 
 \section{Synchronization of the offshore MMC stations}
-The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronization scenario. Since the \gls{DC} side is connected to battery sources, the charging of \gls{HVDC} cables is not considered for this study. As mentioned in Section \ref{control_structures} in Chapter \ref{4}, \gls{MMC}-1 works as grid forming (U/F control) and \gls{MMC}-2 works as grid following (active power control). Once the simulation is started, the network is charged until the secondary side of interface transformer, IT-1. The point of measurement of voltages, currents and powers for the \gls{MMC} stations are at the \gls{LV} side of IT-1 for converter station-1 and \gls{LV} side of IT-2a for converter station-2. The voltage at both the buses are the same as the \gls{MMC} bus voltage, as they are connected to the same bus. Firstly, the circuit breaker, CB-5a is closed and the \gls{MMC} bus is charged. The \gls{MMC} bus voltage builds up to rated 66 kV \footnote{(Phase peak voltage = $66\times \frac{\sqrt{2}}{\sqrt{3}} = 53.88 kV)$} voltage on the \gls{AC} as shown in Figure \ref{fig:VABC_MMC_1_2_CB_5a} and in terms of per unit to nearly 0.98 p.u. as shown in Figure \ref{fig:VACP_MMC_1_2_CB_5a}. The currents at the measurement points for both the buses also increase and settles as shown in Figure \ref{fig:IABC_MMC_1_2_CB_5a}. The current takes nearly 0.35 seconds to settle after the closing of the breaker due to the charging of transformer IT-2a is also done in this process. 
+The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronization scenario. Since the \gls{DC} side is connected to battery sources, the charging of \gls{HVDC} cables is not considered for this study. As mentioned in Section \ref{control_structures} in Chapter \ref{4}, \gls{MMC}-1 works as grid forming (V/F control) and \gls{MMC}-2 works as grid following (active power control). Once the simulation is started, the network is charged until the secondary side of interface transformer, IT-1. The point of measurement of voltages, currents and powers for the \gls{MMC} stations are at the \gls{LV} side of IT-1 for converter station-1 and \gls{LV} side of IT-2a for converter station-2. The voltage at both the buses are the same as the \gls{MMC} bus voltage, as they are connected to the same bus. Firstly, the circuit breaker, CB-5a is closed and the \gls{MMC} bus is charged. The \gls{MMC} bus voltage builds up to rated 66 kV \footnote{(Phase peak voltage = $66\times \frac{\sqrt{2}}{\sqrt{3}} = 53.88 kV)$} voltage on the \gls{AC} as shown in Figure \ref{fig:VABC_MMC_1_2_CB_5a} and in terms of per unit to nearly 0.98 p.u. as shown in Figure \ref{fig:VACP_MMC_1_2_CB_5a}. The currents at the measurement points for both the buses also increase and settles as shown in Figure \ref{fig:IABC_MMC_1_2_CB_5a}. The current takes nearly 0.35 seconds to settle after the closing of the breaker due to selected \gls{PI} parameters of the V/F control in \gls{MMC}-1 and additionally, the charging of transformer IT-2a is also done in this process. 
 
 \begin{figure}[H]
 %\centering
@@ -74,7 +74,7 @@ The \gls{AC} side of \gls{MMC}s are to be connected to simulate the synchronizat
 \label{fig:IABC_MMC_1_2_CB_5a}
 \end{figure}
 
-The next step is to close the circuit breaker, CB-6a to connect \gls{MMC}-2 to the network and hence synchronizing it with \gls{MMC}-1.   The voltage at the \gls{MMC} bus remains the same after connecting \gls{MMC}-2 as shown in Figures \ref{fig:VABC_MMC_1_2_CB_6a} and \ref{fig:VACP_MMC_1_2_CB_6a} since the voltage reference is provided and maintained by \gls{MMC}-1. The currents also remain the same in both the buses after \gls{MMC}-2 connection as seen in Figure \ref{fig:IABC_MMC_1_2_CB_6a}. Now both the converter stations are synchronized and running.
+The next step is to close the circuit breaker, CB-6a to connect \gls{MMC}-2 to the network and hence synchronizing it with \gls{MMC}-1. The voltage at the \gls{MMC} bus remains the same after connecting \gls{MMC}-2 as shown in Figures \ref{fig:VABC_MMC_1_2_CB_6a} and \ref{fig:VACP_MMC_1_2_CB_6a} since the voltage reference is provided and maintained by \gls{MMC}-1. The currents also remain the same in both the buses after \gls{MMC}-2 connection as seen in Figure \ref{fig:IABC_MMC_1_2_CB_6a}. Now both the converter stations are synchronized and running.
 
 
 \begin{figure}[H]
@@ -112,7 +112,7 @@ The next step is to close the circuit breaker, CB-6a to connect \gls{MMC}-2 to t
 \section{Energization of the HVAC cables and OWFs}\label{energization_HVAC_Cables}
 The energization procedure of the \gls{AC} network followed in this work involves charging of each \gls{HVAC} cable and the corresponding \gls{OWF}. Initially cable-1 is charged and then \gls{OWF}-1 is connected. The same is followed for the other sets of \gls{OWF}s as well. As mentioned in Section \ref{Aggregated_OWF_large_scale} in Chapter \ref{4}, each \gls{OWF} have a maximum capacity of 500 MW that is represented by scaling up (by using the scaling factor function in RSCAD) of a \gls{WG} model of 6 MW rated power. For the energization process, the \gls{OWF}s are connected initially with lesser number of \gls{WG} units (9 $\times$ 6 = 48 MW) of nearly 50 MW power to avoid surge of voltage at \gls{PCC} and to maintain the voltage within limits. Once stability is attained after connecting all the \gls{OWF}s, the scaling in all \gls{OWF}s is incremented. Since power only flows through \gls{MMC}-1 until then, the increment can be until the maximum capacity of \gls{MMC}-1 i.e. 1 GW.
 
-The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \ref{fig:WT4_MMC2_Chap5}, is switched on. The voltage at \gls{MMC} common bus is increased and set to a value of nearly 1.05 p.u. as seen in Figure \ref{VACP_MMC_bus_Cab1charg}. The current for cable charging is provided by \gls{MMC}-1 and the active power reference for the \gls{MMC}-2 is not changed in this process. Hence, current flow in \gls{MMC}-1 bus increases for cable-1 charging as shown in Figure \ref{fig:IABC_MMC_1_Cab1charg} and the current flow in \gls{MMC}-2 bus remains unchanged as shown in Figure \ref{fig:IABC_MMC_2_Cab1charg}. The disturbances observed during the switching operation at 0.5 seconds, before the currents stabilize to a particular value at 0.75 seconds, is due to the \gls{PI} parameters chosen for the U/F control in \gls{MMC}-1. Optimizing these parameters through small-signal stability analysis could achieve smoother signals. The current in cable-1 upon CB-1a closing is depicted in Figure \ref{fig:IABC_Cab1_Cab1charg}. 
+The cable-1 gets energized when the CB-1a circuit breaker, as shown in Figure \ref{fig:WT4_MMC2_Chap5}, is switched on. The voltage at \gls{MMC} common bus is increased and set to a value of nearly 1.05 p.u. as seen in Figure \ref{VACP_MMC_bus_Cab1charg}. The current for cable charging is provided by \gls{MMC}-1 and the active power reference for the \gls{MMC}-2 is not changed in this process. Hence, current flow in \gls{MMC}-1 bus increases for cable-1 charging as shown in Figure \ref{fig:IABC_MMC_1_Cab1charg} and the current flow in \gls{MMC}-2 bus remains unchanged as shown in Figure \ref{fig:IABC_MMC_2_Cab1charg}. The disturbances observed during the switching operation at 0.5 seconds, before the currents stabilize to a particular value at 0.75 seconds, is due to the \gls{PI} parameters chosen for the V/F control in \gls{MMC}-1. Optimizing these parameters through small-signal stability analysis could achieve smoother signals. The current in cable-1 upon CB-1a closing is depicted in Figure \ref{fig:IABC_Cab1_Cab1charg}. 
 
 \begin{figure}[H]
 %\centering
@@ -273,7 +273,7 @@ In order to analyse the short-term voltage stability of the system, a permanent 
 
 
 
-The increase in active power in \gls{MMC}-2 after the fault has been cleared (as seen from the red line in Figure \ref{17_3phaseSC}) can be explained by viewing the current profiles in the \gls{OWF}s which is detailed in the following paragraph. A major observation can be viewed from the profile of transients during the fault in the currents of both the \gls{MMC}s in Figure \ref{fig:IABC_MMC_1_3phaseSC} and Figure \ref{fig:IABC_MMC_2_3phaseSC}. The initial rise in current till 0.53 s is due to the occurrence of the three-phase fault. The breaker is opened at 0.542 s. The profile of the currents at around 0.59 s are complementary in both \gls{MMC}s i.e. the currents are decreasing in \gls{MMC}-1 and increasing in \gls{MMC}-2. This is due to the difference in control strategies in \gls{MMC}-1 (U/F control) and \gls{MMC}-2 (active power control).
+The increase in active power in \gls{MMC}-2 after the fault has been cleared (as seen from the red line in Figure \ref{17_3phaseSC}) can be explained by viewing the current profiles in the \gls{OWF}s which is detailed in the following paragraph. A major observation can be viewed from the profile of transients during the fault in the currents of both the \gls{MMC}s in Figure \ref{fig:IABC_MMC_1_3phaseSC} and Figure \ref{fig:IABC_MMC_2_3phaseSC}. The initial rise in current till 0.53 s is due to the occurrence of the three-phase fault. The breaker is opened at 0.542 s. The profile of the currents at around 0.59 s are complementary in both \gls{MMC}s i.e. the currents are decreasing in \gls{MMC}-1 and increasing in \gls{MMC}-2. This is due to the difference in control strategies in \gls{MMC}-1 (V/F control) and \gls{MMC}-2 (active power control).
 
 \begin{figure}[H]
 %\centering
@@ -329,7 +329,7 @@ Analysing at the \gls{OWF}s side of the network, the \gls{DVC} is modelled to pr
 \end{figure}
 
 Also the voltages at \gls{PCC}-2, 3 and 4 have transients during the time of fault and is then stabilised to slightly higher value than the pre-fault state to compensate for the loss of \gls{OWF}-1 from the network. The post-fault voltage value is within the tolerance limit ($\pm$10 \% ) and this can be viewed from the graphs in Figure \ref{VACP_WT234_3phaseSC}. An important observation in the voltage graphs of \gls{OWF}s-2, 3 and 4 is the occurrence of spikes right after the circuit breaker CB-1a is opened, as can be seen in Figure \ref{VACP_WT234_3phaseSC}. 
-There can be two reasons for such a phenomena to occur. The first is that, after the circuit breaker CB-1a is opened, reactive current injection still takes place (at 0.59 s in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) and this causes the voltage at the corresponding \gls{PCC} to also rise. Such a rise in voltage is not applicable in real world \gls{OWF}s and is therefore a drawback that occurs due to the \gls{OWF} modelling. The second reason could be due to two control strategies that provide the voltage reference in the network. It is seen that during the steady state and post-fault condition, the U/F control is dominant and provides the voltage reference in the network. However, during the time of fault, the \gls{DVC} in all \gls{OWF}s takes the role of providing the voltage reference in the corresponding \gls{PCC}s as seen in \gls{PCC}-1 during the time of three-phase line to ground fault in cable-1. The sudden change back to the steady-state condition after the fault is released could lead to discrepancies between the U/F mode and the \gls{DVC}. The conflict between these control strategies occur as to which control strategy provides the voltage reference right after the circuit breaker is open and hence this causes a spike in voltage at the \gls{PCC}s.
+There can be two reasons for such a phenomena to occur. The first is that, after the circuit breaker CB-1a is opened, reactive current injection still takes place (at 0.59 s in Figure \ref{IABC_WT2_3phaseSC} for \gls{PCC}-2) and this causes the voltage at the corresponding \gls{PCC} to also rise. Such a rise in voltage is not applicable in real world \gls{OWF}s and is therefore a drawback that occurs due to the \gls{OWF} modelling. The second reason could be due to two control strategies that provide the voltage reference in the network. It is seen that during the steady state and post-fault condition, the V/F control is dominant and provides the voltage reference in the network. However, during the time of fault, the \gls{DVC} in all \gls{OWF}s takes the role of providing the voltage reference in the corresponding \gls{PCC}s as seen in \gls{PCC}-1 during the time of three-phase line to ground fault in cable-1. The sudden change back to the steady-state condition after the fault is released could lead to discrepancies between the V/F mode and the \gls{DVC}. The conflict between these control strategies occur as to which control strategy provides the voltage reference right after the circuit breaker is open and hence this causes a spike in voltage at the \gls{PCC}s.
 
 \begin{figure}[H]
 %\centering
