--- a/1. Introduction.tex
+++ b/1. Introduction.tex
@@ -6,7 +6,7 @@ This chapter provides an overall picture of the chosen topic for investigation. 
 
 To combat climate change, the production of greenhouse gas emissions must be reduced to significant levels and shift to use of \gls{RES} must be accomplished. In numbers, the European Union's (\gls{EU}) Nationally Determined Contribution (NDC) under the Paris Agreement is to reduce greenhouse gas emissions by at least 40\% by 2030 compared to 1990 \cite{agreement2015unfccc}. 
 
-The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Nearly 13 GW of offshore wind capacity was installed in 2018 in the North Sea. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. A cost-efficient solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Transmission System Operator (TSO) of the Netherlands, TenneT, has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
+The plans involve a future target of nearly 70 GW to 150 GW offshore wind power in the North Sea by 2040. A scope of 140 to 450 GW of offshore wind power in the \gls{EU} by 2050 is seen from the latest European Commission situations. Nearly 13 GW of offshore wind capacity was installed in 2018 in the North Sea. Going with the current pace, the rate of offshore wind deployment is deficient in reaching the objectives of the Paris Agreement. To comply with these objectives, an extraordinary jump in offshore wind energy is required, as shown in Figure \ref{fig:Paris_roll_out}. An effective solution calls for an increase in large scale offshore wind deployment in the North Sea \cite{noauthor_vision_nodate}. As mentioned in \cite{noauthor_tennet_2020}, the Transmission System Operator (TSO) of the Netherlands, TenneT, has already entered into an innovation partnership with its suppliers to establish a 2 GW offshore platform to bring in their contribution towards the Paris Agreement. While the requirement for large scale networks is appealing, the technical challenges that could be encountered should also be considered.  
 
 \begin{figure}[H]
 \centering
@@ -34,20 +34,20 @@ The plans involve a future target of nearly 70 GW to 150 GW offshore wind power 
     \label{fig:Energy_conv_system}
 \end{figure}
 
-The first significant challenge is the control of voltage and frequency by the \gls{PE} converters without the presence of conventional units in the grid. The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to faster dynamic behaviour and needs controllers with faster time response. 
+The first significant challenge is the control of voltage and frequency by the \gls{PE} converters without the presence of conventional units in the grid. The absence of conventional generators would mean that the \gls{PE} converters will have to take into account the decreasing inertia of the system that leads to a faster dynamic behaviour and needs controllers with faster time response. 
 
-The second major concern is with the Proportional and Integral (\gls{PI}) based classical current control methods available for the \gls{PE} converters. Currently, they are the most commonly used controllers due to the ease of operation. They are suitable for operation when connected to a strong network \footnote{SCR = SC$_{MVA}$/P where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
+The second major concern is with the Proportional Integral (\gls{PI}) based conventional current control methods available for the \gls{PE} converters. Currently, they are the most commonly used controllers due to the ease of operation. They are suitable for operation when connected to a strong network \footnote{SCR = SC$_{MVA}$/P;\; where SC$_{MVA}$ is the short circuit power of the network and P is the active power generation. \\
 If SCR = 100 to 250, it is a strong grid. If SCR = 5 to 25, it is a weak grid.}. However, if overlooked, interactions among \gls{PI} controllers can persist in the grid with high \gls{PE} penetration and could lead to instability of the network.
 
 The third critical challenge is the grid restoration following disturbances by the \gls{PE} converter units. With the conventional current control approach, grid restoration is challenging without the help of auxiliary diesel generators. However, in the case of increasing \gls{PE} converters, the role of grid restoration must be taken up by these converters. There can be arguments that storage facilities such as battery and thermal can be a realizable solution in case when there are no conventional generators available. Huge investment costs, low lifetime and low efficiency are the drawbacks when compared to controller modifications that make these storage facilities practically unusable in large scale power system \cite{telaretti_economic_2016}.  
 
-Lastly, the connection of distant Offshore Wind Farms (\gls{OWF}) also creates challenges for the system operators. High Voltage Direct Current (\gls{HVDC}) transmission is preferred over High Voltage Alternating Current (\gls{HVAC}) for longer distances due to lower losses and lower investment costs \cite{ryndzionek_evolution_2020}. Conventionally, in an offshore wind farm network, the offshore converter works in voltage control, and the wind turbine converters work in current control scheme. This could cause problems to the \gls{OWF} during severe dynamic scenarios. One such scenario is the reactive current injection that needs to be provided by the Wind Generators (\gls{WG}) during dynamic conditions as demanded by majority of the grid codes \cite{mohseni_review_2012}. Therefore, the need for large scale offshore network and the technical challenges in integrating \gls{RES} to the grid has proved to be an important area of concern.
+Lastly, the connection of distant Offshore Wind Farms (\gls{OWF}s) also creates challenges for the system operators. High Voltage Direct Current (\gls{HVDC}) transmission is preferred over High Voltage Alternating Current (\gls{HVAC}) for longer distances due to lower losses and lower investment costs \cite{ryndzionek_evolution_2020}. Conventionally, in an offshore wind farm network, the offshore converter works in voltage control, and the wind turbine converters work in current control scheme. This could cause problems to the \gls{OWF} during severe dynamic scenarios. One such scenario is the reactive current injection that needs to be provided by the Wind Generators (\gls{WG}s) during dynamic conditions as demanded by majority of the grid codes \cite{mohseni_review_2012}. Therefore, the need for large scale offshore network and the technical challenges in integrating \gls{RES} to the grid has proved to be an important area of concern.
 
 \section{Literature Review}
 
-As seen in Section \ref{Background}, large scale deployment of offshore wind farms are a crucial requirement to meet the mentioned targets. So far, for small-sized wind farms, the offshore collector platform that connects all the wind generators and transfers power to the offshore converter station, has only contributed to a small part of the total expenditure. The reason being, the \gls{OWF}s mostly have radial collectors. This would not be the case when going for large scale wind farms. The critical area of concern will be the additional costs of subsea cables that require higher ratings and excess lengths \cite{quinonez-varela_electrical_2007}. The upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure and the avoidance of the \gls{AC} collector platform \cite{dnv66kv}. Different large scale topologies are being explored, and the conventional configurations are presented in \cite{guan_novel_2014}. However, the topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the offshore \gls{AC} network directly to the offshore converter station. Such a topology could avoid the need for an offshore \gls{AC} collector platform and bring other benefits such as increased power transfer and reduced array cabling. The techno-economic assessment of such a configuration is depicted in \cite{misyris2020north}. 
+As seen in Section \ref{Background}, large scale deployment of \gls{OWF}s are a crucial requirement to meet the mentioned targets. So far, for small-sized wind farms, the offshore collector platform that connects all the \gls{WG}s and transfers power to the offshore converter station, has only contributed to a small part of the total expenditure. The reason being, the \gls{OWF}s mostly have radial collectors. This would not be the case when going for large scale wind farms. The critical area of concern will be the additional costs of subsea cables that require higher ratings and excess lengths \cite{quinonez-varela_electrical_2007}. The upcoming projects plan to have a higher rating of 66 kV compared to the conventional 33 kV \gls{HVAC} transmission due to the advantages of lesser array cabling, higher power transmission, a considerable decrease in capital expenditure and the avoidance of the \gls{AC} collector platform \cite{dnv66kv}. Different large scale topologies are being explored, and the conventional configurations are presented in \cite{guan_novel_2014}. However, the topology mentioned in \cite{lozada_ayala_dynamic_2018} embraces the utilization of 66 kV \gls{HVAC} transmission from the offshore \gls{AC} network directly to the offshore converter station. Such a topology could avoid the need for an offshore \gls{AC} collector platform and bring other benefits such as increased power transfer and reduced array cabling. The techno-economic assessment of such a configuration is depicted in \cite{misyris2020north}. 
 
-Various control concepts are being explored to mitigate the technical challenges mentioned in the previous section due to the integration of \gls{RES}. Typically, \gls{RES} are connected to the grid for parallel operation using present state of the art technology, i.e. grid following control strategies, in which the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these controllers is that they require an already existing grid voltage. However, the U/F (voltage/frequency) control mode is used for operation in the islanded mode where the voltage is created by the U/F control. The issue concerned with this control is that it is not equipped for the parallel operation of various voltage forming units \cite{weise2019comparison}. New control strategies that can create the grid voltage and work in parallel operation is an emerging area of research. ENTSO-E classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
+Various control concepts are being explored to mitigate the technical challenges mentioned in the previous section due to the integration of \gls{RES}. Typically, \gls{RES} are connected to the grid for parallel operation using present state of the art technology, i.e. grid following control strategies, in which the regulation of power output of the converters is achieved by measuring the angle of the grid voltage. The drawback of these controllers is that they require an already existing grid voltage. However, the V/F (voltage/frequency) control mode is used for operation in the islanded mode where the voltage is created by the V/F control. The issue concerned with this control is that it is not equipped for the parallel operation of various voltage forming units \cite{weise2019comparison}. New control strategies that can create the grid voltage and work in parallel operation is an emerging area of research. ENTSO-E classifies converters into three classes (Class 1, Class 2 and Class 3) and the converters working with the strategies mentioned above are categorized under Class 3. The complete requirements that need to be complied by such converters are depicted in \cite{christensen2020high}.
 
 The new control strategies available for grid parallel and island operation are as follows:
 \begin{itemize}
@@ -57,7 +57,7 @@ The new control strategies available for grid parallel and island operation are 
     For decentralized grids, the parallel operation of voltage forming units is developed recently using the f/P (frequency/active power) and V/Q (voltage/reactive power) droop controls similar to the control in synchronous generators \cite{lopes2012pv}. Few authors have named these droop control concepts as Virtual Synchronous Machines Without Inertia (VSCM0H) \cite{yu2016use}.
     
     \item Direct Voltage Control (\gls{DVC}):
-    The \gls{DVC} control allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous control both in steady-state and dynamic scenarios. The aforementioned control method is implemented for analysis in this thesis work.
+    The \gls{DVC} control allows for the direct control of the \gls{AC} converter voltage which in turn varies the current injected by the converter  \cite{korai_dynamic_2019}, \cite{erlich_new_2017}. This approach provides continuous control both in steady-state and dynamic scenarios. This control method is implemented for analysis in this thesis work.
     
     \item Extended Current Control:
     The control is similar to the classical current control with an additional inertia control in the outer control loop by using a df/dt controller that gives a behaviour similar to that of a synchronous machine \cite{duckwitz_derivation_2019}. 
@@ -74,7 +74,7 @@ To achieve the overall goal, the following research questions are defined:
     
     \item What insights can be attained by the \gls{EMT} average model of Type-4 \gls{WG} with \gls{DVC} in 66 kV network in RSCAD in comparison with a similar system modelled with a simplified Type-4 \gls{WG} configuration with \gls{DVC} in DIgSILENT PowerFactory?
     
-    \item How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore Modular Multi-level Converters (\gls{MMC})s within a multi-gigawatt offshore transmission network?
+    \item How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore Modular Multi-level Converters (\gls{MMC}s) within a multi-gigawatt offshore transmission network?
     
     \item How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in parallel operation?
 
