--- a/6. Conclusions and Future Scope.tex
+++ b/6. Conclusions and Future Scope.tex
@@ -5,7 +5,7 @@ This chapter provides a concise description of the achieved results in the previ
 \section{Summary}
 The compelling need to move towards \gls{RES} and the technical challenges faced due to the penetration of \gls{PE} converters is detailed in Chapter \ref{1} of the thesis. The relevant theoretical background required for the thesis work is presented in Chapter \ref{2}. After recognizing the need for a 66 kV \gls{HVAC} offshore transmission through literature, a 66 kV offshore network with Type-4 \gls{WG} is modelled for \gls{EMT} simulations in Chapter \ref{3}. The 66 kV \gls{HVAC} cables transfer power from the \gls{OWF} to the infinite grid. The conventional usage of an offshore collector platform where the 33 kV from \gls{OWF} is stepped up to nearly 145 kV is avoided when using 66 kV \gls{HVAC} transmission and direct usage of 66 kV allows for twice the amount of power to be transferred. To overcome the challenges faced by conventional current control, the identified \gls{DVC} is implemented in the \gls{GSC} of Type-4 \gls{WG} model for the network in RSCAD. The design of a \gls{HPF} at the output of \gls{GSC} to filter out the higher frequency components is depicted in Section \ref{HPF_design}. On running \gls{EMT} simulations, it is seen that \gls{DVC} provides effective voltage control and the required performance of reactive power injection during dynamic conditions as mentioned in major grid codes \cite{mohseni_review_2012} is achieved. The influence of the major element in \gls{DVC} i.e. the washout filters is detailed by understanding the effect of gain parameters. To validate the \gls{DVC} operation in RSCAD, the performance of the model is compared with the benchmark model in PowerFactory \cite{korai_dynamic_2019} for a similarly modelled 66 kV network. The working is tested for a severe disturbance such as a three-phase line to ground fault in the middle of the cable. It is observed that \gls{DVC} modelled in RSCAD provides similar characteristics as the benchmark \gls{DVC} model in PowerFactory. Thereby, a Type-4 \gls{WG} model with implemented \gls{DVC} in RSCAD working in connection with an infinite grid is successfully developed and validated. The model can be used as reference for future works due to its real-time application.  
 
-The effective method to accomplish the targets set for several European and other countries towards energy transition is to further the usage of large scale offshore wind energy. In this thesis, a large scale offshore network with \gls{DVC} in \gls{WG}s is developed as detailed in Chapter \ref{4}. This is done by modelling a 2 GW offshore network with four sets of \gls{WG}s (with \gls{DVC}s) connected to two \gls{MMC}s using \gls{HVAC} cables through a modular approach in RSCAD. Each \gls{WG} can be scaled up to have a maximum rating of 500 MW. The model also avoids the usage of a offshore collector platofrm by using 66 kV \gls{HVAC} transmission. The chosen topology for the network and the representation of subsystems using Tline modules in RSCAD is represented. The U/F control mode available in \cite{wachal2014guide} is developed for \gls{MMC}-1 suitable for a 66 kV network and the outer loop control of \gls{MMC}-2 is modified to be suitable for a 66 kV network. The work around to use an extra interface transformer in \gls{MMC}-2 bus due to the unavailability of 66 kV control structure for \gls{MMC} in RSCAD is explained. 
+The effective method to accomplish the targets set for several European and other countries towards energy transition is to further the usage of large scale offshore wind energy. In this thesis, a large scale offshore network with \gls{DVC} in \gls{WG}s is developed as detailed in Chapter \ref{4}. This is done by modelling a 2 GW offshore network with four sets of \gls{WG}s (with \gls{DVC}s) connected to two \gls{MMC}s using \gls{HVAC} cables through a modular approach in RSCAD. Each \gls{WG} can be scaled up to have a maximum rating of 500 MW. The model also avoids the usage of a offshore collector platofrm by using 66 kV \gls{HVAC} transmission. The chosen topology for the network and the representation of subsystems using Tline modules in RSCAD is represented. The V/F control mode available in \cite{wachal2014guide} is developed for \gls{MMC}-1 suitable for a 66 kV network and the outer loop control of \gls{MMC}-2 is modified to be suitable for a 66 kV network. The work around to use an extra interface transformer in \gls{MMC}-2 bus due to the unavailability of 66 kV control structure for \gls{MMC} in RSCAD is explained. 
 
 
 The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronization of \gls{MMC}s, energization procedure of \gls{HVAC} cables and \gls{WG}s in real time environment are described. To achieve the overall goal defined in Chapter \ref{1}, the 2 GW test network is subjected to perturbations such as sudden disconnection of 1 set of \gls{WG} and three-phase fault in the middle of an \gls{HVAC} cable for dynamic analysis. A logic is developed in RSCAD for the operation of circuit breaker at the \gls{HVAC} cable end. The performance of \gls{DVC} to work in islanding operation is depicted by the operation of the circuit breaker. The \gls{DVC} implemented in \gls{GSC} executes reactive current injection by \gls{WG} during islanding operation in a large scale network which is also a significant requirement for Class 3 type converters. A modular 2 GW model with an enhanced control strategy (\gls{DVC}) implemented in \gls{WG}, working in coordination with two \gls{MMC}s with different control strategies is successfully developed for \gls{EMT} simulations in the real-time environment.   
@@ -23,7 +23,7 @@ The operation of the 2 GW model is detailed in Chapter \ref{5}. The sychronizati
 
 \paragraph{\textcolor{blue}{Research Question 3 : How can Type-4 \gls{WG}s with implemented \gls{DVC} work in coordination with offshore \gls{MMC}s within a multi-gigawatt offshore transmission network?}}
 
-\paragraph{} Four sets of \gls{WG}s are connected in parallel to a common bus to which the two \gls{MMC}s are connected. In the steady-state operation, the grid forming \gls{MMC}-1 provides the voltage reference, \gls{MMC}-2 and \gls{DVC} follow this reference. During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s. By bringing in the necessary modifications in the outer loop of active power control for \gls{MMC}-2, coordination between the U/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in the \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. The \gls{DVC} in this case also contributes to the reactive current injection in case of islanding. The operation of the network remains stable during severe perturbations such as disconnection of one set of \gls{WG} and three-phase line to ground fault in the middle of any \gls{HVAC} cable.
+\paragraph{} Four sets of \gls{OWF}s are connected in parallel to a common bus to which the two \gls{MMC}s are connected. In the steady-state operation, the grid forming \gls{MMC}-1 provides the voltage reference, \gls{MMC}-2 and \gls{DVC} follow this reference. During the time of fault, the voltage reference at the \gls{PCC} is provided by the \gls{DVC} in \gls{WG}s. The coordination between the V/F control in \gls{MMC}-1, active power control in \gls{MMC}-2 and the \gls{DVC} in the \gls{OWF}s provide a synchronized operation during the steady state and dynamic conditions in the network. The \gls{DVC} in this case also contributes to the reactive current injection in case of islanding. The operation of the network remains stable during severe perturbations such as disconnection of one set of \gls{OWF} and three-phase line to ground fault in the middle of any \gls{HVAC} cable.
 
 \paragraph{\textcolor{blue}{Research Question 4 : How effectively do Type-4 \gls{WG}s with implemented \gls{DVC} perform when connected in parallel operation?}}
 
